--- a/.gitignore
+++ b/.gitignore
@@ -80,3 +80,6 @@ app.*.map.json
 +# احتفظ بـ .vscode إن كنت تضع إعدادات تشغيل/مهام تريد مشاركتها
 *.zip
 *.tgz
+lib/firebase_options.dart
+android/app/google-services.json
+firebase.json
